# saorsa-mls

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  justfile
.github/: dependabot.yml
.github/workflows/: benchmark.yml  coverage.yml  quality.yml  release.yml  security.yml  test.yml
benches/: crypto_benchmarks.rs
docs/: UPSTREAM-ASK-persistent-identity.md
docs/adr/: ADR-001-post-quantum-mls.md  ADR-002-real-treekem-for-forward-secrecy-and-pcs.md
src/: api.rs  crypto.rs  group.rs  key_schedule.rs  lib.rs  member.rs  protocol.rs  quic_integration.rs  treekem.rs  treekem_group.rs
tests/: api_suite.rs  audit_logging_tests.rs  ciphersuite_negotiation.rs  credential_validation_tests.rs  fips_kat_tests.rs  hpke_tests.rs  join_processing.rs  message_auth.rs  slh_dsa_tests.rs  welcome_secrets.rs
