[package]
name = "saorsa-mls"
version = "0.3.4"
edition = "2021"
rust-version = "1.82.0"
authors = ["Saorsa Labs Limited <saorsalabs@gmail.com>"]
license = "AGPL-3.0"
description = "Experimental Message Layer Security (MLS)-inspired library for P2P secure group communication"
repository = "https://github.com/dirvine/saorsa-mls"
homepage = "https://github.com/dirvine/saorsa-mls"
documentation = "https://docs.rs/saorsa-mls"
readme = "README.md"
keywords = ["mls", "encryption", "group", "forward-secrecy", "p2p"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
bytes = { version = "1.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1.3", features = ["use-std"] }

# Post-Quantum Cryptography (single source of truth for all crypto operations)
saorsa-pqc = "0.4"

# QUIC networking
ant-quic = "0.21"

# ChaCha20-Poly1305 types (used by saorsa-pqc API)
chacha20poly1305 = "0.10"

# Random number generation (shared with saorsa-pqc)
rand_core = { version = "0.10", features = ["getrandom"] }
rand_chacha = "0.3"

# Constant-time operations (also used by saorsa-pqc)
subtle = "2.5"

# Note: We rely on saorsa-pqc for:
# - BLAKE3 and SHA3 hashing
# - HMAC-SHA3
# - HKDF-SHA3
# - ChaCha20-Poly1305 AEAD
# - ML-KEM and ML-DSA post-quantum algorithms

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

## Logging (not currently used)
# tracing = "0.1"

# Data structures
dashmap = "6.0"
parking_lot = "0.12"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
zeroize_derive = "1.4.2"
lazy_static = "1.4"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"
pretty_assertions = "1.4"
tokio-test = "0.4"
hex = "0.4"

[features]
default = []
test-utils = []